// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormControl > Snapshot > With multiple field 1`] = `
.c0 {
  position: relative;
}

.c1 {
  padding: 0 2px;
  margin-bottom: 4px;
}

.c3 {
  padding: 0 2px;
  margin-top: 4px;
}

.c4 {
  display: block;
  text-align: left;
}

.c2 {
  display: block;
  text-align: left;
  word-break: break-word;
}

<div>
  <div
    class="Stack display-flex direction-vertical margin layout"
    data-testid="bezier-react-form-control"
    style="--b-form-control-left-label-wrapper-height: 36px;"
  >
    <div
      class="c0 c1"
    >
      <label
        class="Text typo-13 bold margin c2"
        data-testid="bezier-react-form-label"
        foundation="[object Object]"
        id="form-label"
        style="--b-text-color: var(--txt-black-darkest);"
      >
        Label
      </label>
    </div>
    <div
      aria-describedby="form-help-text"
      aria-labelledby="form-label"
      class="Stack display-flex direction-vertical justify-start align-stretch wrap margin layout"
      data-testid="bezier-react-form-group"
      id="form-group"
      role="group"
      style="--b-stack-spacing: 6px;"
    >
      <div
        class="Stack display-flex direction-vertical margin layout"
        data-testid="bezier-react-form-control"
        style="--b-form-control-left-label-wrapper-height: 36px;"
      >
        <div
          class="c0 c1"
        >
          <label
            class="Text typo-13 bold margin c2"
            data-testid="bezier-react-form-label"
            for="field-:r3:"
            foundation="[object Object]"
            id="field-:r3:-label"
            style="--b-text-color: var(--txt-black-darkest);"
          >
            First Inner Label
          </label>
        </div>
        <div
          class="TextFieldWrapper variant-primary size-36"
          data-testid="bezier-react-text-input"
        >
          <input
            autocomplete="off"
            class="TextFieldInput"
            id="field-:r3:"
            size="36"
            value=""
          />
        </div>
      </div>
      <div
        class="Stack display-flex direction-vertical margin layout"
        data-testid="bezier-react-form-control"
        style="--b-form-control-left-label-wrapper-height: 36px;"
      >
        <div
          class="c0 c1"
        >
          <label
            class="Text typo-13 bold margin c2"
            data-testid="bezier-react-form-label"
            for="field-:r4:"
            foundation="[object Object]"
            id="field-:r4:-label"
            style="--b-text-color: var(--txt-black-darkest);"
          >
            Second Inner Label
          </label>
        </div>
        <div
          class="TextFieldWrapper variant-primary size-36 invalid"
          data-testid="bezier-react-text-input"
        >
          <input
            aria-invalid="true"
            autocomplete="off"
            class="TextFieldInput"
            id="field-:r4:"
            size="36"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="c0 c3"
    >
      <p
        class="Text typo-13 margin c4"
        data-testid="bezier-react-form-helper-text"
        foundation="[object Object]"
        id="form-help-text"
        style="--b-text-color: var(--txt-black-dark);"
      >
        Description
      </p>
    </div>
  </div>
</div>
`;

exports[`FormControl > Snapshot > With multiple field and left label position 1`] = `
.c0 {
  position: relative;
}

.c4 {
  padding: 0 2px;
  margin-bottom: 4px;
}

.c5 {
  padding: 0 2px;
  margin-top: 4px;
}

.c1 {
  display: grid;
  grid-template-rows: repeat(2,auto);
  grid-template-columns: 150px 1fr;
  grid-column-gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-row: 1 / 1;
  grid-column: 1 / 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  height: var(--b-form-control-left-label-wrapper-height);
}

.c6 {
  grid-row: 2 / 2;
  grid-column: 2;
}

.c7 {
  display: block;
  text-align: left;
}

.c3 {
  display: block;
  text-align: left;
  word-break: break-word;
}

<div>
  <div
    class="c0 c1"
    data-testid="bezier-react-form-control"
    style="--b-form-control-left-label-wrapper-height: 36px;"
  >
    <div
      class="c0 c2"
    >
      <label
        class="Text typo-14 bold margin c3"
        data-testid="bezier-react-form-label"
        foundation="[object Object]"
        id="form-label"
        style="--b-text-color: var(--txt-black-darkest);"
      >
        Label
      </label>
    </div>
    <div
      aria-describedby="form-help-text"
      aria-labelledby="form-label"
      class="Stack display-flex direction-vertical justify-start align-stretch wrap margin layout"
      data-testid="bezier-react-form-group"
      id="form-group"
      role="group"
      style="--b-stack-spacing: 6px;"
    >
      <div
        class="Stack display-flex direction-vertical margin layout"
        data-testid="bezier-react-form-control"
        style="--b-form-control-left-label-wrapper-height: 36px;"
      >
        <div
          class="c0 c4"
        >
          <label
            class="Text typo-13 bold margin c3"
            data-testid="bezier-react-form-label"
            for="field-:r6:"
            foundation="[object Object]"
            id="field-:r6:-label"
            style="--b-text-color: var(--txt-black-darkest);"
          >
            First Inner Label
          </label>
        </div>
        <div
          class="TextFieldWrapper variant-primary size-36"
          data-testid="bezier-react-text-input"
        >
          <input
            autocomplete="off"
            class="TextFieldInput"
            id="field-:r6:"
            size="36"
            value=""
          />
        </div>
      </div>
      <div
        class="Stack display-flex direction-vertical margin layout"
        data-testid="bezier-react-form-control"
        style="--b-form-control-left-label-wrapper-height: 36px;"
      >
        <div
          class="c0 c4"
        >
          <label
            class="Text typo-13 bold margin c3"
            data-testid="bezier-react-form-label"
            for="field-:r7:"
            foundation="[object Object]"
            id="field-:r7:-label"
            style="--b-text-color: var(--txt-black-darkest);"
          >
            Second Inner Label
          </label>
        </div>
        <div
          class="TextFieldWrapper variant-primary size-36 invalid"
          data-testid="bezier-react-text-input"
        >
          <input
            aria-invalid="true"
            autocomplete="off"
            class="TextFieldInput"
            id="field-:r7:"
            size="36"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="c0 c5 c6"
    >
      <p
        class="Text typo-13 margin c7"
        data-testid="bezier-react-form-helper-text"
        foundation="[object Object]"
        id="form-help-text"
        style="--b-text-color: var(--txt-black-dark);"
      >
        Description
      </p>
    </div>
  </div>
</div>
`;

exports[`FormControl > Snapshot > With single field 1`] = `
.c0 {
  position: relative;
}

.c1 {
  padding: 0 2px;
  margin-bottom: 4px;
}

.c3 {
  padding: 0 2px;
  margin-top: 4px;
}

.c4 {
  display: block;
  text-align: left;
}

.c2 {
  display: block;
  text-align: left;
  word-break: break-word;
}

<div
  class="Stack display-flex direction-vertical margin layout"
  data-testid="bezier-react-form-control"
  style="--b-form-control-left-label-wrapper-height: 36px;"
>
  <div
    class="c0 c1"
  >
    <label
      class="Text typo-13 bold margin c2"
      data-testid="bezier-react-form-label"
      for="form"
      foundation="[object Object]"
      id="form-label"
      style="--b-text-color: var(--txt-black-darkest);"
    >
      Label
    </label>
  </div>
  <div
    class="TextFieldWrapper variant-primary size-36"
    data-testid="bezier-react-text-input"
  >
    <input
      aria-describedby="form-help-text"
      autocomplete="off"
      class="TextFieldInput"
      id="form"
      size="36"
      value=""
    />
  </div>
  <div
    class="c0 c3"
  >
    <p
      class="Text typo-13 margin c4"
      data-testid="bezier-react-form-helper-text"
      foundation="[object Object]"
      id="form-help-text"
      style="--b-text-color: var(--txt-black-dark);"
    >
      Description
    </p>
  </div>
</div>
`;

exports[`FormControl > Snapshot > With single field and left label position 1`] = `
.c0 {
  position: relative;
}

.c4 {
  padding: 0 2px;
  margin-top: 4px;
}

.c1 {
  display: grid;
  grid-template-rows: repeat(2,auto);
  grid-template-columns: 150px 1fr;
  grid-column-gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-row: 1 / 1;
  grid-column: 1 / 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  height: var(--b-form-control-left-label-wrapper-height);
}

.c5 {
  grid-row: 2 / 2;
  grid-column: 2;
}

.c6 {
  display: block;
  text-align: left;
}

.c3 {
  display: block;
  text-align: left;
  word-break: break-word;
}

<div
  class="c0 c1"
  data-testid="bezier-react-form-control"
  style="--b-form-control-left-label-wrapper-height: 36px;"
>
  <div
    class="c0 c2"
  >
    <label
      class="Text typo-14 bold margin c3"
      data-testid="bezier-react-form-label"
      for="form"
      foundation="[object Object]"
      id="form-label"
      style="--b-text-color: var(--txt-black-darkest);"
    >
      Label
    </label>
  </div>
  <div
    class="TextFieldWrapper variant-primary size-36"
    data-testid="bezier-react-text-input"
  >
    <input
      aria-describedby="form-help-text"
      autocomplete="off"
      class="TextFieldInput"
      id="form"
      size="36"
      value=""
    />
  </div>
  <div
    class="c0 c4 c5"
  >
    <p
      class="Text typo-13 margin c6"
      data-testid="bezier-react-form-helper-text"
      foundation="[object Object]"
      id="form-help-text"
      style="--b-text-color: var(--txt-black-dark);"
    >
      Description
    </p>
  </div>
</div>
`;
